/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Interface.java to edit this template
 */
package com.mycompany.eva2_12_polimorfismo_int;

/**
 *
 * @author jesus
 */
public interface MostrarDatos {
    void imprimirDatos();
}
